<!-- Master layout. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white" />

    <include
        layout="@layout/detail_today_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <LinearLayout
        android:id="@+id/detail_additional_pane"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/detail_accent_pane_background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/abc_list_item_padding_horizontal_material">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/detail_accent_pane_background"
            android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
            app:columnCount="2">

            <android.support.v7.widget.Space
                app:layout_columnSpan="2"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/detail_humidity_label_textview"
                android:layout_width="0dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
                android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
                android:text="@string/humidity"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/detail_humidity_textview"
                android:layout_width="0dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_columnWeight="1"
                tools:text="38%" />

            <TextView
                android:id="@+id/detail_pressure_label_textview"

                android:layout_width="0dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
                android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="@string/pressure"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"
                app:layout_columnWeight="1" />


            <TextView
                android:id="@+id/detail_pressure_textview"
                android:layout_width="0dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_columnWeight="1"
                tools:text="995 hPa" />

            <TextView
                android:id="@+id/detail_wind_label_textview"
                android:layout_width="0dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
                android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="@string/wind"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/detail_wind_textview"
                android:layout_width="0dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_columnWeight="1"
                tools:text="4km/h NW" />

            <android.support.v7.widget.Space
                app:layout_columnSpan="2"
                app:layout_rowWeight="1" />

        </android.support.v7.widget.GridLayout>

        <ImageSwitcher
            android:id="@+id/imageSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />
    </LinearLayout>
</LinearLayout>